--- a/views/about.html
+++ b/views/about.html
@@ -8,7 +8,7 @@
     <title>About</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/views/works.html">Works</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/views/photo-gallery.html">Photo Gallery</a>
+                        <a class="nav-link" href="/views/photoGallery.html">Photo Gallery</a>
                       </li>
                     </ul>
                   </div>
@@ -33,7 +33,21 @@
             </nav>
         </div>
     </header>
-
-
+    <div>
+      <h1>Her life</h1>
+      <p></p>
+    </div>
+    <div>
+      <h2>Important isues</h2>
+      <p class="text">
+        Pardo Bazán was a standard bearer for women's rights and dedicated both her literary production and her life to their defense. In all of her works she incorporated her ideas on the modernization of Spanish society, on the need for female education and on women's access to all the rights and opportunities that men already enjoyed.
+      </p>
+      <p class="text">
+        In 1882, she participated in a conference organized by The Free Educational Institution, and openly criticized the education received by the Spanish women, in which values like passivity, obedience and submission to their husbands were relentlessly promoted.
+      </p>
+      <p class="text strong">
+        Emilia Pardo Bazán became the first woman to preside over the literature section of the Ateneo de Madrid in 1906, and the first to occupy a chair of Neo-Latin literature at the Central University Of Madrid
+      </p>
+    </div>
 </body>
 </html>
