--- a/views/works.html
+++ b/views/works.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/views/works.html">Works</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/views/photo-gallery.html">Photo Gallery</a>
+                        <a class="nav-link" href="/views/photoGallery.html">Photo Gallery</a>
                       </li>
                     </ul>
                   </div>
@@ -33,6 +33,23 @@
             </nav>
         </div>
     </header>
-    
+    <div>
+      <h1>Her work</h1>
+      <p class="text">
+        In 1876 she won a literary prize offered by the municipality of Oviedo, for an essay entitled Estudio crítico de las obras del padre Feijoo (Critical Essay on the Works of Father Feijoo), the subject of her essay being a Benedictine monk.
+      </p>
+      <p class="text">
+        She also published her first book of poems in the same year, entitled Jaime in honor of her newborn son. This was followed by a series of articles in La Ciencia cristiana, a highly orthodox Roman Catholic magazine, edited by Juan Orti y Lara.
+      </p> 
+      <p class="text">
+        Her first novel, Pascual López: autobiografía de un estudiante de medicina (Pascual López: Autobiography of a Medical Student), which appeared in 1879, was written in a realist, romantic style. She was encouraged by its success and, two years later, she published Un viaje de novios (A Honeymoon Trip), in which an incipient interest in French naturalism can be observed, causing something of a sensation at the time. This was further fuelled by the appearance of La tribuna (1883), which was more heavily influenced by the ideas of Émile Zola and is widely considered to be the first Spanish naturalist novel. Her response to the critics' outrage was published in 1884 under the title La cuestión palpitante (The Critical Issue)
+      </p>
+      <p class="text">
+        1885 saw the publication of El Cisne de Vilamorta (The Swan of Vilamorta), in which the naturalist scenes are more numerous and more pronounced than in any of her previous works, although the author has been accused of shrinking from the logical application of her theories by inserting a romantic and inappropriate ending.
+      </p>
+      <p class="text strong">
+        Probably the best of Emilia Pardo Bazán's work is embodied in Los pazos de Ulloa (The House of Ulloa), published in 1886, which recounts the slide into decadence of an aristocratic family, as notable for the heroes Nucha and Julián as for characters including the political bravos, Barbacana and Trampeta.
+      </p>
+    </div>
 </body>
 </html>
