--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
     <title>Home</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -19,7 +19,7 @@
                   <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/views/">About</a>
+                        <a class="nav-link active" aria-current="page" href="/views/about.html">About</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/views/works.html">Works</a>
