--- a/views/photoGallery.html
+++ b/views/photoGallery.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/views/works.html">Works</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/views/photo-gallery.html">Photo Gallery</a>
+                        <a class="nav-link" href="/views/photoGallery.html">Photo Gallery</a>
                       </li>
                     </ul>
                   </div>
@@ -34,31 +34,11 @@
         </div>
     </header>
     
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/images/emilia2.jpeg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/emilia3.jpeg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/emilia-library.jpeg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>  
+    <div>
+      <img src="/images/emilia2.jpeg"  alt="...">
+      <img src="/images/emilia3.jpeg"  alt="...">
+      <img src="/images/emilia-library.jpeg" alt="...">
+    </div>
+  
 </body>
 </html>
